package Data;

import java.util.Map;

public class Week {
    private Map<Integer,String> weekRecipes;

    public Map<Integer, String> getWeekRecipes() {
        return weekRecipes;
    }

    public void setWeekRecipes(Map<Integer, String> weekRecipes) {
        this.weekRecipes = weekRecipes;
    }
}
